--- a/index.html
+++ b/index.html
@@ -343,6 +343,23 @@ Good night my princess <br>
 Sleep well 8+ come in my dreams, lets talk so many of things<br>
 Always love you soo much no matter what, I Always love you 😊<br>
 My Hinata💝<br><br>
+<hr>
+<br><br>
+12-nov-2023 9:18PM<br>
+ohiiioooo Mitsuha chan<br>
+hope you have a safe and happy diwali<br>
+i wanna share something what made me happy today😊<br>
+amamma gave me some money and said me to buy crackers myself, and hehe im little excited in diwali, but in i remeber what happen in last diwali, while others and we burning crackers. tesla and other pets in street got so scared of sound, and you know tesla is used to have fear of loud sounds,<br>
+i decide to donate a little to orphans in my favourite person name and with alittle i bought dog food to feed street dogs, then saved a little 😁😁😁<br>
+and i record some travelling in a route that which i lost few weeks back in college starting days at midnight in a heavy rain, i guess i will upload tomorrow early morning cz now network a little low,<br>
+oiii how is your health now<br>
+mine just see and rest leaved to your imaginations<br>
+<img src="dabbr.jpg"/><br><br>
+not that bad, i just love a little when mixed with a carrot <br>
+gomen gomen😅😅but only way to eat it without hesitation...<br><br>
+huh!!! these cracker sounds surround are so annoying, and i also  wanna get some sleep hmmm a little tired of travelling all the day, so..<br>
+Good night , sleep well, sweet dreams come in my dreams<br>
+Always love you my cute sweet potato<br><br>
 
 
             <br>
