--- a/index.html
+++ b/index.html
@@ -360,6 +360,26 @@ gomen gomen😅😅but only way to eat it without hesitation...<br><br>
 huh!!! these cracker sounds surround are so annoying, and i also  wanna get some sleep hmmm a little tired of travelling all the day, so..<br>
 Good night , sleep well, sweet dreams come in my dreams<br>
 Always love you my cute sweet potato<br><br>
+<br><hr><br>
+14-nov-2023 9:11PM<br>
+<br>
+hey Hinata💝 <br>
+is everything ok?<br>
+you said you may try to reply at saturday, now its been a since we had a talk. my soul bothering a little. are you really?, tell me after that night it woudn't bought you any trouble<br>
+hope everything is fine, please be safe okay!!!<br>
+.....<br>
+please be safe...<br>
+🙄 still something bothering a little, please be safe for me.<br>
+and... im truly sorry for what hapoened that day in july.<br>
+...<br>
+.....<br>
+...<br>
+hey... say me you are fine and alright, please be fine<br>
+please be safe
+<br>
+ALways love you<br>
+My Hinata💝<br>
+good night<br>
 
 
             <br>
