--- a/index.html
+++ b/index.html
@@ -379,7 +379,27 @@ please be safe
 <br>
 ALways love you<br>
 My Hinata💝<br>
-good night<br>
+good night<br><br><br>
+<hr><br>
+15-nov-2023 9:36PM<br><br>
+hey....Mitsuha<br>
+hope your are fine. please be fine okay.<br>
+how's your day...?<br>
+how's your health..?<br>
+myself im fine now fever completely gone, and cold also<br>
+you know what now i also adapt to take that "dabur chavanprash" twice a day in half table spoon along milk.. <br>
+but it still a little weird taste -_-<br>
+i want to take it by a K from you okay...<br>
+you stupid potato if you get chance answer me and mainly dont do any risk okay...<br>
+please be safe for me...<br>
+if i stay a little long here i may go emotional and you end up stuck in a novel again...<br>
+so <br>
+Good night, sleep well, do 7+hrs of sleep . drink hot water after woke up. dont forget to trim your nails. please be safe okay<br>
+always love you , love you . love you sooo much... and more<br>
+🙄 i wanna hug you, and you know that night we talk, i fell a little shy to ask you for a hug... 👉👈<br>
+don't mind,<br>
+Good night<br>
+sweet dreams...<br>
 
 
             <br>
