--- a/index.html
+++ b/index.html
@@ -401,8 +401,104 @@ don't mind,<br>
 Good night<br>
 sweet dreams...<br>
 
+<br><hr><br><br>
+16-Nov-2023 9:03PM<br><br>
+<i>Ai</i><br>
+Ai 💝 my Mitsuha<br>
 
+<br>
+<i>I am fine , I am not at home I am at kuchbihar; falakata at my father's sister place (we have so many festivals at same time Diwali, Kali pooja, Bhaiduj etc)</i><br>
+ohh okok i umderstood, seems like so many events in a rows there to visit, oii oiiii be careful when go out into rush place ok!!!<br>
+<br>
+<i>Don't worry ok .. i never got time to see your messages and now i just checked it but still couldn't read all , after i reach home I will reply you ,
+     please wait. And i don't mind if it turns noble... I will return at 17 Nov evening if they don't change the plan.</i><br>
+     okkk i understood you know what i remeber after you said your at your fathers sisters home<br>
+     the door she broke in a fight 😅😅 gomen gomen this thing direct came in mind after you said your father sister's home<br>
+     and i understood your situation, don't need to worry those stay there untill you say to clear and have a good time. and oiii please be careful and safe and sound okkk!!!<br>
+     if you get chance show me the festival images 😊😊😊<br>
+     and im waiting for you to reply 😊<br>😅 i guess it already made upto a sort of novel😅😅 gomen<br><br>
+
+     <i>By the way i guess I am saved and safe because of your prayers. Arigato senpai 🙇🏻‍♀️</i><br>
+     😶 hey... does anything happened, are you alright, please be careful okay please....<br>
+     i can't imagine a future without you...<br>
+     please be safe all the time okay... and tell me what happened after reaching home<br><br>
+
+     <i>and yes very happy Diwali and I feel so happy that you donet you always have the best ways 💛 your mom is very lucky </i><br>
+     Arigato my little girl, and are not you👉👈 like... my... mom 👉👈...<br><br>
+
+     <i> By the way there is so much things to say you .. ,^_^ </i><br>
+     sure and im waiting to hear all from you😊, and you know what now i imagining if it a call then it may be listening to you all thought way to my college instrad listening to your songs😊<br>
+     i always love to listen to you my princess😊<br><br><br>
+
+     <i>By the way are you still afraid of losing me?</i><br>
+     
+Back in days it is a strongly "Yes", once what happened in July I went to a stage I can't define before sending you the letter. I started reading Bible and there i saw a lines saying 
+" Love is patient, love is kind. It does not envy, it does not boast, it is not proud.  It does not dishonour others, it is not self-seeking, it is not easily angered, it keeps no record of wrongs. Love does not delight in evil but rejoices with the truth.  It always protects, always trusts, always hopes, always perseveres. Love never fails." - St Paul (1 Corinthians 13:4-7)"
+<br>
+Luke 6:31: Do to others as you would have them do to you. Corinthians 16:14: Do everything in love.
+<br>
+Proverbs 3:3-4: Let love and faithfulness never leave you; bind them around your neck, write them on the tablet of your heart. Then you will win favor and a good name in the sight of God and man.
+<br>
+Romans 12:10: Be devoted to one another in love. Honor one another above yourselves.
+
+<br>
+1 Peter 3:7: In the same way, you husbands must give honor to your wives. Treat your wife with understanding as you live together. She may be weaker than you are, but she is your equal partner in God's gift of new life. Treat her as you should so your prayers will not be hindered.
+<br>
+2 Peter 1:5-7: For this very reason, make every effort to add to your faith goodness; and to goodness, knowledge; and to knowledge, self-control; and to self-control, perseverance; and to perseverance, godliness; and to godliness, mutual affection; and to mutual affection, love.
+<br>
+1 Thessalonians 3:12: May the Lord make your love increase and overflow for each other and for everyone else, just as ours does for you.
+<br>
+
+Proverbs 10:12: Hatred stirs up conflict, but love covers over all wrongs.
+<br>
+1 Peter 4:8: Above all, love each other deeply, because love covers over a multitude of sins
+<br>
+Corinthians 13:13: And now these three remain: faith, hope and love. But the greatest of these is love.
+<br>
+Romans 12:9: Love must be sincere. Hate what is evil; cling to what is good.
+<br>
+Colossians 3:14: And over all these virtues put on love, which binds them all together in perfect unity.
+<br>
+Ephesians 4:2: Be completely humble and gentle; be patient, bearing with one another in love.
+<br>
+Jude 1:2: Mercy, peace and love be yours in abundance.
+<br>
+John 13:34: A new commandment I give to you, that you love one another: just as I have loved you, you also are to love one another.
+<br>
+Song of Solomon 4:7: You are altogether beautiful, my darling; there is no flaw in you
+<br>
+Hebrews 10:24-25: And let us consider how we may spur one another on toward love and good deeds, not giving up meeting together, as some are in the habit of doing, but encouraging one another—and all the more as you see the day approaching.
+<br>
+While i read these i started to understand after reading this line :
+if you have faith as small as a mustard seed, you can say to this mountain, 'Move from here to there,' and it will move. Nothing will be impossible for you.” Matthew 17:20-21.1
+<br>
+I start to have faith, huh at first I doubt it is it really then I understood by the history these were written in thousands years ago in different time lines (hundreds of years) different continents different languages. In deep clear by God through these people it resulted a Bible these each person who wrote each chapter, are got healed from dark past by having faith in God then got choosen by God.
+<br>
+From that time when I loose mind..... There i start reading and having faith in what i prayed. 
+<br>
+You know what, there is this person she's like a sister to my mother around end of June she gave birth to a baby. Me went to visit later a little play with the baby boy, I asked for a pic but she refuse. A little after she said this " while about 6th months doctors said it's impossible for the baby to have a life, uncle and she started to pray for the baby life and holding faith. Later she gave birth to a healthy boy.  She said the whole with tears. From that time I start to have strong belief and faith. And start to pray for you to be safe and happy all the time. From that i start not afraid of loosing what i actually understood is, while having faith having doubts is totally something like loosing faith by self. In something simply what I can explain or what i wanna say in simple to you is, "even having a true little faith in God without doubt can bring the things we need from God when I done by heartfullly by us."
+I don't know what you understood, If i said anything wrong forgive me, 🙄 I think I wrote another to explain you... But still it's a little i said on times I will say you a lot lot more..
+<br>
+And even more in bedtime stories my cute sweet little princess 😊
+<br>
+If I may i would like to say, after reading the question there i feel something feared in while i cool down myself, cz when I believe that i may go anyfar to not to loose you. And as long as we believe and have faith, nothing will seperate us. 
+<br>
+
+Listen carefully 🧐🧐🧐<br>
+🧐If think of asking this question again, keep in mind I'm gonna bite you as many times as you asked me the question,,, understood 🧐🧐🧐🧐..<br>
+I always love to bite you 😋😋😋
+            <br><br>
+            🙄🙄🙄 gomen gomen<br>
+            this ... this i wrote another hard for you to read 🙄<br>
+            sorrry<br>
+            i guess it would better for me to turn off and sleep cz clock is going to 11:30PM<br>
+            so Good night my princess😊, my cute little stupid princess, requestion and wishing you to be careful and safe all the time.<br>
+            sleep well and come in my dream and sit beside me look into my eyes and say all things, i would like to stay like the way listening to you😊<br>
+            i always love to listen to you<br>
+            in more always love you more more and more always my princess😊<br>
             <br>
+            Aiesteru💝<br><br>
+
      <br><br>
 <!--- end of pass--->  
 <br>
