--- a/index.html
+++ b/index.html
@@ -207,6 +207,207 @@ yes you're always correct and it goes like roaming around knowledge boundaries s
    its about 6:52AM so bye train came at 7:20 i need hurry up and so bye<br>
    ittekimas i will reply rest after reaching home<br><br>
                 
+<hr><br>
+
+20-Nov-2023 9:44PM<br>
+<i>*Ok os as you want to know how I felt by the letter you send by you, 
+    I actually don't have any words to explain because I never felt that way before, 
+    I kinda feel this warmth from inside that someone cares and putting an effort to contact me. 
+    I still kept that print out of your handwritten note and I like those short forms . 
+    I got goosebumps when I realised it was from you. I was having geography class that time so before mam entered I ran to washroom. 
+    I read it then I started to cry 🙄 then I went to pee and I got lock in one of the toilet, 
+    door was not opening I started screaming one mam came and few care taker came they barche open the door by kicking. 
+    I came out to find it was an hilarious moment but I was not in a mood to laugh -_- why do such things happen to me only. 
+    So ya this was my experience with your letter.</i><br>
+    i can feel and understand the movement when you get the letter, you know what i planned a whole 3 days straight to send you. in one possible way i found
+     penzom the pegion, hehe then after i reach her i asked like a favour then she agree later, -_- but she called me dump junior, while after you got letter i asked penzom-sis how it went she said after the letter riya ran to washroom <br>
+     at this movement i start to get tears and laugh at the same time. who the ... locked the door when you are in, still it became hilarious , it something different..<br>
+     and i love the way you keep the letter by laminating it with hand.<br>
+     <br><br>
+
+     <i>*Woh that is crazy, I didn't knew I motivate this many people.. but you motivated me when I started talking to you. 
+        And the way you are improving through studies, manners, physically is so amazing that you are my Role Model, and I truly mean it </i><br>
+        i dont know i may motivated or not, and all the time i want to help you push forwards your limits and with your will i saw possible results now it is in your hand to stand with your mind potential<br>
+        i still dont know how im role modes, if i answer i like to say in love everything is possible, and just take a look on things , <br>
+        i know that youre the best, i always proud of your will, and i belive you can do well.<br><br><br>
+
+        <i>*so are you bathing late night? Do you wash your hair daily? </i><br>
+        its not a no but sometimes i do bath around 8:30PM + and when come to hair im only doing twice a week once at wedness day and one before fasting at saturday<br><br>
+
+        <i>*my specs broke because I sat on it by mistake, what is eye exercises ? </i><br>
+        arey potato be careful maa, see when come to eye exercises<br>
+        - lye on bed and rotate eyes to edges of corner ceiling of the room.<br>
+        - make this above steo clock and anti clock wise,<br>
+        - after woke up rotate eyes to corneres and see through possible edge of eyes <br>
+        - rest you know mainly water, then there a need of sunlight to warm the eye covered acids to help it well<br><br><br>
+
+        <i>*Oh 17th February 2023 .. so when did I texted you for the Frist time, say me the date and time? 
+            I know you loved me before even seeing me but just to know it again I asked.. I like to know it ,
+             I will like to know it from you again and again if I forget. 
+            I want to know by text, voice note, face to face whenever I ask you have to say.</i><br>
+            its 17 february after straight 3 days infront of laptop i choose to goto sleep, opened instagram and in a unexpected reel i replied, around 10:20PM, when im about to sleep my Lucky charm firstime texted me to explain the comment<br>
+            then she didnt let me sleep all night, when clock turn to 18February 2:17AM my mobile charge about to over, my princess asked me to stayawake and find charger for mobile, the beautiful movement both went to 10% charge at same time, <br>
+            with chargers, we keep the conversation till 4:30AM then went to sleep,<br>
+            from that day, i choosed to make myself pure, keeping soul pure , controling self, something that healed my heart and on later i don't notice untill i realize that everymoring i started praying my princess to be safe , healthy and happy...<br><br>
+            sure ask me as many time as you want, as many ways as you want , when i said im your my time and all mine is yours.<br>
+            if face to face i would like to lock into your eyes, i guess i dont need to say a word cz my eyes will say that how much im into you<br>
+            ^-^<br><br><br>
+
+            <i>*You silly you don't have to learn to flirt I will teach you.hehe!</i><br>
+            then would you still like me if i behave weird dorky, and a nerd way...<br><br>
+
+            <i>*In your adhar pic your eyes looked scary or eles you have "your eyes got my heart falling for you"</i><br>
+            hehe im getting little shy agian you stupid<br>
+            hehe<br><br>
+
+            <i>*😂What you are going to say to your teacher if extra assignments that I said you to sleep early and well ? 
+                I like the way you said "my girl".hmm</i><br>
+                actually once i did this one also hehe<br>
+                when mam about to give me a work i said her, mam i need to sleep early. if you still choose to give me work to stay late night , i will complain to my girl<br>
+                then she laughed and said good joke timing shy boy -_-<br>
+                i say "my girl" cz that my girl is a gift from god to me . so she is my godly women isn't it<br><br>
+
+
+                <i>*Oh then see many things happen that it proves that our heart is connected because before asking doing it is a symbol that want the same thing..</i>
+yes youre are absoulutely said correct about it, it just like we are one soul things are,,, its just like magic isn't it...<br>no words to explain it, its just an amazing feel<br><br>
+
+<br><br><br>
+
+<i>*you get though of me and you smile n blush ! Even I get the same 😅 weird... Wow I am happy that I can help you get confidence yay! </i><br>
+hehe sometimes i do like this without even knowing what im actually doing..hhehe<br>
+arigato for your confidence and support ^-^<br><br><br>
+
+<i>*Your dedication and your improvement is the reason you are my role model, i wanna do things like you, and I do 21 day mission book.</i><br>
+im again gonna do that schedule or plan... <br><br>
+
+<i>*Who is that international famous scientist you talked with at gitam?</i><br>
+wait i'll show you...<br><br><br>
+
+
+<i>*I can't leave any text unread or not replied .. i don't ignore, 
+    i know the pain of ignorance so I try my best not to ignore any one in any way. The way I suffer I can't let others feel that .</i><br>
+    and i loved it so much when you decicatedly went to long long back convo in insta to reply the unread, not for this for everything im so lucky to have you...<br><br>
+
+    <i>*You are right in so many ways, you are also wise you know, and your words are so healing.</i><br>
+    Arigato my princess 😊<br><br>
+
+    <i>*Wow you so determined, you bought and started eating also "chyawanprash" i didn't start eating it till now as you know it look like poop and taste like mud. Hey don't eat much or else you will get loose motions 😂 this thing also helps in digestion and taking one spoon is enough for one day.
+         Eat at night after dinner after one hour or you can eat at morning after breakfast after half hour.</i><br>
+         thanks for late warning -_-<br>
+         i ate about 3 spoons by adding a little choclate then 2 days my stomach went to hell<br>now i will try to eat it properly as you said.<br> and thats not that bad in taste , tomoroow im gonna try by pacing in between buscits ... chavan buscuit heheheh!!!<br><br>
+
+         <i>When do you eat it ?</i><br>
+         everyday from the day i bought<br><br>
+
+         <i>Oh sure with k !</i><br>😃😃😃😃😃😃<br>one of thing make me blush all the time is when you yes for a K<br>
+         i dont know how it be when a kiss, but im so obsessed with you, so obsessed to get kiss from you <br>
+         K😊<br><br>
+
+            <i>*So have you slept +8 at weekend?</i><br>
+            i tried but i wouldnt able to sleep i dont know but something keeep bother me to stay wake up all night moving on bed, but i will try best to fulfill my sleep<br><br>
+<i>*What's with the half heart hand pic , are you in love with chyawanprash or what!? 😐</i><br>
+😅😅😅 im litte stupid in behaviour sometimes never mind<br><br>
+
+<i>*Yes that is one only my father sister who broke the door😂 , now I guess she have changed and there only 
+    I have this cousin who is bi and there is so much to say about it like funny and weird things</i><br>
+    😅 its still a funny things when come to think of it, and sure say me later...<br><br>
+
+    <i>*Arry nothing bad happened and I am safe just the thing is I played with danger. Lol</i><br>
+    playing with danger..😒😒😒 seems like i need to bite you and talk about this 😒 stupid please be safe okk<br>
+    <br>
+
+    <i>*I wish I could make your this wish of call (till reaching college) come true. But not now later if possible I will ok.</i><br>
+    you know what you did, your audio messages, the songs you sang. no matter how many times i play those, each time i close my eyes and start feeling like youre around me when song is on<br>
+    more than this i wish you to be safe happy, strong, peaceful mind , mo worries and healthy that what i wish for more of the time, so make this wish come true for me😊<br><br>
+
+    <i>*BAKA tomato I am not your real mom, I just like to take care of you .. oh wait I toh don't care 😝</i><br>
+    my stupid lovely sweet potato , Aiesteru 😊<br><br>
+
+    <i>*Those line from Bible is so amazing and yeh definitely all holly books are written in hundreds of years experience.. 
+        by the way after July my perents are a bit strict about religion 
+        so this time they said not to celebrate Christmas and there is no way I can read Bible , 
+        but you know me I like all religions and I love all kinda of fun celebration, 
+        the things which I wrote that day was in fear and i guess you understand.</i><br>
+        i know you and i can understand you, and i wanna understand you all the time, <br>
+        i know in what situation you wrote like that, <br>
+        arey where i said you to read bible now, daijobu i will do it for you ^-^, those line i shown you are i wrote in a book to show you, i love those and i remeber the way you read and wrote lines from geetha on paper and sent to me. i just tried like that <br>
+        👉👈 out of your comfort i dont want anything to be...<br><br>
+
+        <hr><br>
+        <i>*Hey this isn't funny ok ! Where have you been after the time I text you tha you have stopped messaging me , 
+            are you offended! I am sorry please.. just let me know that if you ar doing fine.</i><br>
+            i didn't stopped , arey see my phone stop working and to acess this code to send you text is all in that mobile, and them i manage to make it work like normal now<br>
+            and im doing fine, and oi why saying sorry ahh, dont worry maa i always try my best to understand you, cz you never like a choice to choose, youre my only option the only one i want till to end stay together<br><br>
+
+            <i>*Are you fine? How is your health? Where are you, aren't you home? Did something happen? Or are you mad at me ? </i><br>
+            im fine and healthy, even im the strongest hehe<br>
+            oii oii dont over think okk nothing happen to me im fully safe, i just went to home for some of my certificates and came by evening<br>
+            ummh yaa im so mad in love with you, im madly want k's from you, im madly wanna bite you, im madly wanna hug you, im madly wanna show my love to you , My beloved is mine, and I am yours ^-^<br><br>
+
+            <i>*I am so confused and worried. No matter what remember you have promised me that you will not leave so you can't die or leave me , BaKa Tomato.</i><br>
+            my sweet little potato, try to remember as many promises as i made to you, whenever i fulfill it dont say you forgot, if so you may experince a strong teeth bite 😊<br>
+            huh!!! how i suppose to leave you when all the time i pray for a happy life with you till end even in eternity... always love you soo much maa , dont overthing okay, please be safe happy and healthy all the time for me<br>
+            my sweet little princess<br><br>
+
+            <i>*Let me know your condition and if you are not in this world then after waiting for you within few days I will come to you in hell or heaven.. </i><br>
+            dont talk like that okay...<br>
+            im fine and safe, and when come to heaven, there it is for us <br>
+            you know what you made me remeber this anime "attack on titans"<br>
+            where eren die for his love, he want her to live with her, he dont want to die but for sake of people he love he sacrified himseld, and after his death Mikasa waited for her death and spend rest of her life beside eren grave and burried there and they met in eternity<br>
+            i will tell you all the story later.,,<br><br>
+
+            <i>Oi what happened to you? Where are you ! 
+                🙁 You tell me to be safe and you only not safe .. this is not fair.. you will NOT do fasting from this week.</i><br>
+                dont worry maa, nothing happen to me im always here with you dont worry ok<br>
+                im fully safe , arey my girl as long as youre safe and healthy im also be<br>
+                oii huh! dont say be stop fasting okay, im fully fine maaa dont worry, im only doing on saturday not all the week<br><br>
+
+                <i>Are you getting any of my text are you ignoring me?</i><br>
+                what make you think that im ignoring you, the only one i wait for most of time, how shall i suppose ignore then...<br><br>
+
+                <i>Oh so you are alive 🥴 I almost thought, why am I so 😭 ..</i><br>
+                aren't i your...<br>
+                i love the way you are, my cute little princess i completely understood how you fell<br>
+                sorry for being like that make the late i will try my best to not repeat like that again<br>
+
+                <br>
+            <i>oh you not mad at me 🥺 ..
+                I was thinking all nonsense.</i><br>
+                when i said i love you, it also mean i will try mybest to understand you, i dont like to dishoner my girl even in my mind<br>
+                and this was some reason, that i don't like to be around other girls and thats a reason i would allow any other girl come near me or in my mind, cz i thought like it may hurt my princess <br>
+                i love my girl soo much, i love to understand her all the ways i possibly can and more. whatever you hold dont hesitate to say straight in face ^-^<br><br>
+<br>
+<i>By the way today is the last day of my vacation. From tomorrow school submission of assessment and all. 
+    Plus I took some extra work from friends so I could earn a little. And even I have exam in December.. 
+    Now seriously I am crying and happy that you are alive, what the heck was I think 😵</i><br>
+    oiii dont missunderstood but think once about this, you not earning a little rather you loosing your valuable time to make someones time lenghten, i dont know how to say it clear but i can say like rather putting effort on those work why cant you invest it in yourself<br>
+    investing in self is worth a lot<br>
+    forgive me if i say any wrong or harsh<br><br>
+
+    sorry for not talking well last night for being silent 🙄<br>i dont know why im being like a stupid sometimes with you and result hurting you<br>
+    sorry sometimes i go silent like an idiot<br>
+<br>
+
+hey,,, 👉👈 now im going to sleep, now im too tired🙄, due to lack of sleep from 3 days<br>
+now i will try to sleep till 6:30<br>
+a part i have started internal lab exams from tomorrow,<br>
+mid from monday then external lab then semister exams<br>
+huhh!! this war ground of exams in engineering is a challenging marathon pass over month all of suddent in a row of about 25+ exams straight<br>
+i will try mybest to delive well<br>
+
+<br>
+for now GOod night, dont worry i will be fine and oii please be safe okay<br>
+sleep well and dont skip sleep okay<br>
+love you sooo much more more more and more my princess<br>
+always love you soooo much<br>
+youre boy like to answer your questions, love to clear you doubts. i dont want my girl overthing on my stupid things<br>
+so no matter what the thing is dont hesitate to ask me straight okkk<br>
+Love you puja<br>
+
+Good night, turn left ummmah...!<br>hehe<br><br>
+
+
+    
 
 
 
