--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ how beautiful it is to listen to that person krishna, how amazing feel it give u
 <hr>
 <hr>
 <!---/ ours...-->
-<!----pass--> <!--sheeet from Submitted 9/30/23, 9:08 PM -->
+<!----pass--> 
 <br>
 20-Nov-2023  4:47AM<br><br>
 
@@ -406,7 +406,24 @@ Love you puja<br>
 
 Good night, turn left ummmah...!<br>hehe<br><br>
 
+<hr><br>
 
+22-NOv-2023 8:14PM<br>
+honey... im home...<br><br>
+hey...! sorry for hiding this from you😔<br>
+i dont wanna keep hide it from you, cz im afraid, if i come to start hiding things like this even i cant leave it even once i afraid where it maybe a habit <br>
+forgive me for hiding this from you,<br>
+while we talking recent night again i went to silent while saying few things<br>
+while you saying about someone cried for you 🙄 it something little bothered me even it in past, a little and im i dont know how to say and express when im low. even in day to day life im something dont like others to show simpathy on me, 🙄 i feel so embraced of it<br>
+it is one of reason i said no while you ask me for pics in communication notes, i feel so embrace and uncomfortable when someone see my tears<br>
+but i opned my eyes, that you aren't a someone else, you the one i wanna spend my rest of my life, only one asked me say what i feel without hiding<br>
+🙄 when i remeber you said "dont hide anything from me", it start bothering me like "to myself: you start hiding, and making excuse as it is  only one time. who know what you may hide further" like wise<br>
+and you know why i keep say i wouldn't allow other girl to come near me, would talk or try to be friend with other girl. <br>
+cz 👉👈 i know something how it feel 🙄 and i dont want you to feel that because of my actions, <br>sorry if i said anywrong 🙄 i dont want to hide this anymore not even this i dont wanna hide anything from you in further also.<br>
+i dont want my action be the reason for my girl to overthink or get bothered <br> all the time i want to give you more and more once i expected, i wanna give you the unconditional love like the children get once after birth, i wanna be loyal to you more than i can to where you forget what it really mean by betrayal<br>
+i wanna see you more mental strong healthy having peace joy and happy all the time<br><br>
+forgive me if i said anything wrong, cz i start saying direct after i reached home. 🙄<br>
+now going to bath  👉👈 see you around<br><br>
     
 
 
