--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <a class="resource-button" href="https://drive.google.com/file/d/1ySELHjXYQDQR7Egm0J4sxIN_p3maMV8v/view?usp=sharing" ><span >download English work</span></a> 
         <a class="resource-button" href="https://drive.google.com/file/d/1VJ-ApclP7sogDU4d5BODmcJYnDZyWnU4/view?usp=sharing" ><span >downloadProject work</span></a> 
         <a class="resource-button" href="https://docs.google.com/document/d/1Z_A6FwDXWmaf_6O3yZTZW0M5pn4B8J95T0dZioZHFMA/edit?usp=sharing" ><span>Project work</span></a>
+<br>
+         <a class="resource-button" href="https://drive.google.com/file/d/1hFvT-AiBzRxjzwN1ZlFCkhp4gxVmAsn-/view?usp=sharing" ><span>laes of newton pdf</span></a>
+         <a class="resource-button" href="https://youtu.be/P4vrQfW1ZCE" ><span>laws of newton video</span></a>
+        
         <br><hr>
         <b>2023-2024</b><hr>
         <a class="resource-button" href="https://drive.google.com/file/d/15vrbw8H-jiSfjC5JZaj-2rW1qCYQF744/view?usp=sharing" target="_blank"><span   > Data science </span></a> 
