--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a class="resource-button" href="https://drive.google.com/file/d/1VJ-ApclP7sogDU4d5BODmcJYnDZyWnU4/view?usp=sharing" ><span >downloadProject work</span></a> 
         <a class="resource-button" href="https://docs.google.com/document/d/1Z_A6FwDXWmaf_6O3yZTZW0M5pn4B8J95T0dZioZHFMA/edit?usp=sharing" ><span>Project work</span></a>
 <br>
-         <a class="resource-button" href="https://drive.google.com/file/d/1hFvT-AiBzRxjzwN1ZlFCkhp4gxVmAsn-/view?usp=sharing" ><span>laes of newton pdf</span></a>
+         <a class="resource-button" href="https://drive.google.com/file/d/1hFvT-AiBzRxjzwN1ZlFCkhp4gxVmAsn-/view?usp=sharing" ><span>laws of newton pdf</span></a>
          <a class="resource-button" href="https://youtu.be/P4vrQfW1ZCE" ><span>laws of newton video</span></a>
         
         <br><hr>
